tarball; updated makefiles for include dirs order and minor changes.

--- a/deps/freetype-2.3.12/Makefile
+++ b/deps/freetype-2.3.12/Makefile
@@ -92,7 +92,7 @@ _OBJECTS2 = \
 
 OBJECTS = $(_OBJECTS)
 
-SOURCES = $(ECSOURCES) \
+SOURCES = \
 	src/autofit/afglobal.c \
 	src/autofit/afindic.c \
 	src/autofit/autofit.c \
