--- a/eda/drivers/sqlite/Makefile
+++ b/eda/drivers/sqlite/Makefile
@@ -39,8 +39,8 @@ include $(_CF_DIR)include.mk
 export LD_LIBRARY_PATH = ../../../obj/$(PLATFORM)/lib/
 export DYLD_LIBRARY_PATH = ../../../obj/$(PLATFORM)/lib/
 ECP := $(call psep,../../../obj/$(PLATFORM)/bin/ecp)
-ECC := $(call psep,../../../obj/$(PLATFORM)/bin/ecc)
-ECS := $(call psep,../../../obj/$(PLATFORM)/bin/ecs)
+ECC := $(call psep,../../../obj/$(PLATFORM)/bin/ecc)$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
+ECS := $(call psep,../../../obj/$(PLATFORM)/bin/ecs)$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
 EAR := $(call psep,../../../obj/$(PLATFORM)/bin/ear)
 
 # END OF CUSTOM TOOLCHAIN / COMPILER CONFIG
