--- a/compiler/ecs/Makefile
+++ b/compiler/ecs/Makefile
@@ -39,8 +39,8 @@ include $(_CF_DIR)include.mk
 export LD_LIBRARY_PATH = ../../obj/$(PLATFORM)/lib/
 export DYLD_LIBRARY_PATH = ../../obj/$(PLATFORM)/lib/
 ECP := $(call psep,../bootstrap/obj/bin.$(PLATFORM)/ecp)
-ECC := $(call psep,../bootstrap/obj/bin.$(PLATFORM)/ecc)
-ECS := $(call psep,../bootstrap/obj/bin.$(PLATFORM)/ecs)
+ECC := $(call psep,../bootstrap/obj/bin.$(PLATFORM)/ecc)$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
+ECS := $(call psep,../bootstrap/obj/bin.$(PLATFORM)/ecs)$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
 EAR := $(call psep,../../obj/$(PLATFORM)/bin/ear)
 
 # END OF CUSTOM TOOLCHAIN / COMPILER CONFIG
