--- a/ecere/Makefile.vanilla
+++ b/ecere/Makefile.vanilla
@@ -37,8 +37,8 @@ include $(_CF_DIR)include.mk
 # CUSTOM TOOLCHAIN / COMPILER CONFIG
 
 ECP := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecp$(E))
-ECC := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecc$(E))
-ECS := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecs$(E))
+ECC := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecc$(E))$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
+ECS := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecs$(E))$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
 EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
 
 # END OF CUSTOM TOOLCHAIN / COMPILER CONFIG
