--- a/ear/cmd/Makefile
+++ b/ear/cmd/Makefile
@@ -36,12 +36,12 @@ include $(_CF_DIR)include.mk
 
 # CUSTOM TOOLCHAIN / COMPILER CONFIG
 
-export LD_LIBRARY_PATH = ../../obj/$(PLATFORM)/lib/
-export DYLD_LIBRARY_PATH = ../../obj/$(PLATFORM)/lib/
-ECP := $(call psep,../../compiler/bootstrap/obj/bin.$(PLATFORM)/ecp)
-ECC := $(call psep,../../compiler/bootstrap/obj/bin.$(PLATFORM)/ecc)$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
-ECS := $(call psep,../../compiler/bootstrap/obj/bin.$(PLATFORM)/ecs)$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
-EAR := $(call psep,../../obj/$(PLATFORM)/bin/ear)
+export LD_LIBRARY_PATH = ../../obj/$(HOST_PLATFORM)/lib/
+export DYLD_LIBRARY_PATH = ../../obj/$(HOST_PLATFORM)/lib/
+ECP := $(call psep,../../compiler/bootstrap/obj/bin.$(HOST_PLATFORM)/ecp$(HOST_E))
+ECC := $(call psep,../../compiler/bootstrap/obj/bin.$(HOST_PLATFORM)/ecc$(HOST_E))$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
+ECS := $(call psep,../../compiler/bootstrap/obj/bin.$(HOST_PLATFORM)/ecs$(HOST_E))$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
+EAR := $(call psep,../../obj/$(HOST_PLATFORM)/bin/ear$(HOST_E))
 
 # END OF CUSTOM TOOLCHAIN / COMPILER CONFIG
 
