--- a/ecere/Makefile.ecereCOM
+++ b/ecere/Makefile.ecereCOM
@@ -36,10 +36,10 @@ include $(_CF_DIR)include.mk
 
 # CUSTOM TOOLCHAIN / COMPILER CONFIG
 
-ECP := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecp$(E))
-ECC := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecc$(E))$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
-ECS := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecs$(E))$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
-EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
+ECP := $(call psep,../compiler/bootstrap/obj/bin.$(HOST_PLATFORM)/ecp$(HOST_E))
+ECC := $(call psep,../compiler/bootstrap/obj/bin.$(HOST_PLATFORM)/ecc$(HOST_E))$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
+ECS := $(call psep,../compiler/bootstrap/obj/bin.$(HOST_PLATFORM)/ecs$(HOST_E))$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
+EAR := $(call psep,../obj/$(HOST_PLATFORM)/bin/ear$(HOST_E))
 
 # END OF CUSTOM TOOLCHAIN / COMPILER CONFIG
 
