--- a/epj2make/Makefile
+++ b/epj2make/Makefile
@@ -36,12 +36,12 @@ include $(_CF_DIR)include.mk
 
 # CUSTOM TOOLCHAIN / COMPILER CONFIG
 
-export LD_LIBRARY_PATH=../obj/$(PLATFORM)/lib
-export DYLD_LIBRARY_PATH=../obj/$(PLATFORM)/lib
-ECP := $(call psep,../obj/$(PLATFORM)/bin/ecp)
-ECC := $(call psep,../obj/$(PLATFORM)/bin/ecc)$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
-ECS := $(call psep,../obj/$(PLATFORM)/bin/ecs)$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
-EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
+export LD_LIBRARY_PATH=../obj/$(HOST_PLATFORM)/lib
+export DYLD_LIBRARY_PATH=../obj/$(HOST_PLATFORM)/lib
+ECP := $(call psep,../obj/$(HOST_PLATFORM)/bin/ecp$(HOST_E))
+ECC := $(call psep,../obj/$(HOST_PLATFORM)/bin/ecc$(HOST_E))$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
+ECS := $(call psep,../obj/$(HOST_PLATFORM)/bin/ecs$(HOST_E))$(if $(CROSS_TARGET), -t $(TARGET_PLATFORM),)
+EAR := $(call psep,../obj/$(HOST_PLATFORM)/bin/ear$(HOST_E))
 
 # END OF CUSTOM TOOLCHAIN / COMPILER CONFIG
 
