sdk/Build System: Improved the bootstrap Makefiles - Renamed include.mk -> default.cf - Moved eC compiler definitions into default.cf - Updated the bootstrap Makefiles to be closer to generated Makefiles - Updated the libecere bootstrap - Fixed usage of $(if with -Wl, (comma confusion) - Updated i18n templates

--- a/Makefiles.epj
+++ b/Makefiles.epj
@@ -9,6 +9,9 @@
          "ecere"
       ]
    },
+   "Configurations" : [
+
+   ],
    "Files" : [
       {
          "Folder" : "compiler",
@@ -221,18 +224,8 @@
             "ExcludeFromBuild" : true
          }
       },
-      {
-         "FileName" : "include.mk",
-         "Options" : {
-            "ExcludeFromBuild" : true
-         }
-      },
-      {
-         "FileName" : "Makefile",
-         "Options" : {
-            "ExcludeFromBuild" : true
-         }
-      }
+      "default.cf",
+      "Makefile"
    ],
    "ResourcesPath" : "",
    "Resources" : [
