--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -5,7 +5,7 @@ CONFIG := release
 PRECOMPILED_SOURCES = libec/precompiled/expression.c libec/precompiled/grammar.c libec/precompiled/type.c
 
 include ../crossplatform.mk
-include ../include.mk
+include ../default.cf
 
 all: ecp ecc ecs
 
