.gitignore: Ignoring .configs/ directories rather than .cf/.mk - Don't want to include include.mk / default.cf

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@
 *.sym
 *.main.ec
 *.bowl
-*.mk
-*.cf
 
 # Intermediate dirs
 #obj/**/*.c
@@ -15,6 +13,7 @@ obj/
 debug/
 release/
 dat/
+.configs/
 
 # CodeGuard files
 .codeguard/
