sdk: Fixed LD_LIBRARY_PATH for bootstrap; Cross-compiling fixes

--- a/ecere/Makefile
+++ b/ecere/Makefile
@@ -534,7 +534,7 @@ endif
 else
 	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
 endif
-	$(call cpq,$(TARGET),../$(SODESTDIR))
+	$(call cpq,$(TARGET),../$(HOST_SODESTDIR))
 ifdef LINUX_TARGET
 	ln -sf $(LP)$(MODULE)$(SO).0.44 ../$(SODESTDIR)$(LP)$(MODULE)$(SO).0
 	ln -sf $(LP)$(MODULE)$(SO).0.44 ../$(SODESTDIR)$(LP)$(MODULE)$(SO)
