--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,7 @@ Source: ecere-sdk
 Section: devel
 Priority: optional
 Maintainer: Jerome St-Louis <jerstlouis@gmail.com>
-Build-Depends: autotools-dev,
-               debhelper (>= 7.0.50~),
+Build-Depends: debhelper (>= 7.0.50~),
                libffi-dev,
                libfontconfig1-dev,
                libfreetype6-dev,
