debian: Fixed proper inclusion of Debian flags

--- a/debian/rules
+++ b/debian/rules
@@ -2,6 +2,8 @@
 
 DEB_HOST_ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH)
 export DEBIAN_PACKAGE=1
+export DPKG_EXPORT_BUILDFLAGS=1
+include /usr/share/dpkg/buildflags.mk
 
 %:
 	dh $@
