--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Jerome St-Louis <jerstlouis@gmail.com>
 Build-Depends: debhelper (>= 7.0.50~),
-               dpkg (>= 1.16.1),
+               dpkg-dev (>= 1.16.1~),
                libffi-dev,
                libfontconfig1-dev,
                libfreetype6-dev,
